admin graph beautified...

--- a/CM/Pages/AddPage.cshtml
+++ b/CM/Pages/AddPage.cshtml
@@ -21,6 +21,10 @@
             <td>HTML:</td>
             <td><textarea id="HTML" name="HTMLForm" class="form-control" rows="4"></textarea></td>
         </tr>
+        <tr>
+            <td><input type="checkbox" name="checkbox1" id=" checkbox1" runat="server" checked="@Model.chc" /></td>
+            <td>Option 1</td>
+        </tr>
     </table>
 
     <button type="submit">Add</button>
