--- a/CM/Pages/Index.cshtml
+++ b/CM/Pages/Index.cshtml
@@ -8,120 +8,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tree Structure</title>
     <style>
-		/*Now the CSS*/
-		* {
-			margin: 0;
-			padding: 0;
-		}
+        .tree,
+        .tree ul,
+        .tree li {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            position: relative;
+        }
 
-		.tree ul {
-			padding-top: 20px;
-			position: relative;
-			transition: all 0.5s;
-			-webkit-transition: all 0.5s;
-			-moz-transition: all 0.5s;
-		}
+        .tree {
+            margin: 0 0 1em;
+            text-align: center;
+        }
 
-		.tree li {
-			float: left;
-			text-align: center;
-			list-style-type: none;
-			position: relative;
-			padding: 20px 5px 0 5px;
-			transition: all 0.5s;
-			-webkit-transition: all 0.5s;
-			-moz-transition: all 0.5s;
-		}
+            .tree,
+            .tree ul {
+                display: table;
+            }
 
-			/*We will use ::before and ::after to draw the connectors*/
+                .tree ul {
+                    width: 100%;
+                }
 
-			.tree li::before, .tree li::after {
-				content: '';
-				position: absolute;
-				top: 0;
-				right: 50%;
-				border-top: 1px solid #ccc;
-				width: 50%;
-				height: 20px;
-			}
+                .tree li {
+                    display: table-cell;
+                    padding: .5em 0;
+                    vertical-align: top;
+                }
 
-			.tree li::after {
-				right: auto;
-				left: 50%;
-				border-left: 1px solid #ccc;
-			}
+                    .tree li:before {
+                        outline: solid 1px #666;
+                        content: "";
+                        left: 0;
+                        position: absolute;
+                        right: 0;
+                        top: 0;
+                    }
 
-			/*We need to remove left-right connectors from elements without
-		any siblings*/
-			.tree li:only-child::after, .tree li:only-child::before {
-				display: none;
-			}
+                    .tree li:first-child:before {
+                        left: 50%;
+                    }
 
-			/*Remove space from the top of single children*/
-			.tree li:only-child {
-				padding-top: 0;
-			}
+                    .tree li:last-child:before {
+                        right: 50%;
+                    }
 
-			/*Remove left connector from first child and
-		right connector from last child*/
-			.tree li:first-child::before, .tree li:last-child::after {
-				border: 0 none;
-			}
-			/*Adding back the vertical connector to the last nodes*/
-			.tree li:last-child::before {
-				border-right: 1px solid #ccc;
-				border-radius: 0 5px 0 0;
-				-webkit-border-radius: 0 5px 0 0;
-				-moz-border-radius: 0 5px 0 0;
-			}
+                .tree code,
+                .tree span {
+                    border: solid .1em #666;
+                    border-radius: .2em;
+                    display: inline-block;
+                    margin: 0 .2em .5em;
+                    padding: .2em .5em;
+                    position: relative;
+                }
 
-			.tree li:first-child::after {
-				border-radius: 5px 0 0 0;
-				-webkit-border-radius: 5px 0 0 0;
-				-moz-border-radius: 5px 0 0 0;
-			}
+                    .tree ul:before,
+                    .tree code:before,
+                    .tree span:before {
+                        outline: solid 1px #666;
+                        content: "";
+                        height: .5em;
+                        left: 50%;
+                        position: absolute;
+                    }
 
-		/*Time to add downward connectors from parents*/
-		.tree ul ul::before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 50%;
-			border-left: 1px solid #ccc;
-			width: 0;
-			height: 20px;
-		}
+                .tree ul:before {
+                    top: -.5em;
+                }
 
-		.tree li a {
-			border: 1px solid #ccc;
-			padding: 5px 10px;
-			text-decoration: none;
-			color: #666;
-			font-family: arial, verdana, tahoma;
-			font-size: 11px;
-			display: inline-block;
-			border-radius: 5px;
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			transition: all 0.5s;
-			-webkit-transition: all 0.5s;
-			-moz-transition: all 0.5s;
-		}
+                .tree code:before,
+                .tree span:before {
+                    top: -.55em;
+                }
 
-			/*Time for some hover effects*/
-			/*We will apply the hover effect the the lineage of the element also*/
-			.tree li a:hover, .tree li a:hover + ul li a {
-				background: #c8e4f8;
-				color: #000;
-				border: 1px solid #94a0b4;
-			}
-				/*Connector styles on hover*/
-				.tree li a:hover + ul li::after,
-				.tree li a:hover + ul li::before,
-				.tree li a:hover + ul::before,
-				.tree li a:hover + ul ul::before {
-					border-color: #94a0b4;
-				}
+                .tree > li {
+                    margin-top: 0;
+                }
+
+                    .tree > li:before,
+                    .tree > li:after,
+                    .tree > li > code:before,
+                    .tree > li > span:before {
+                        outline: none;
+                    }
+
     </style>
 </head>
 
@@ -137,7 +109,9 @@
 				<th>ID</th>
 				<th>Name</th>
 				<th>Parent</th>
+				<th>Child Count</th>
 				<th>HTML Content</th>
+				<th>Has Content</th>
 			</tr>
 			@foreach (var item in @Model.trees)
 			{
@@ -145,9 +119,13 @@
 					<th>@item.id</th>
 					<th>@item.name</th>
 					<th>@item.parent</th>
+					<th>@item.childcount</th>
 					<th>
 						<a class="btn btn-primary btn-sm" href="/EditPage?id=@item.id">Edit</a>
 					</th>
+					
+					<th><input type="checkbox" checked="@item.HasContent" id="checkbox1" runat="server" /></th>
+					
 				</tr>
 			}
 		</table>
@@ -167,4 +145,7 @@
         // Insert tree HTML into the tree container
         document.getElementById("tree-container").innerHTML = treeHtml;
     </script>
+
+
+
 </body>
