admin page improvements, 1.05.2024 13:44

--- a/CM/Pages/AddPage.cshtml
+++ b/CM/Pages/AddPage.cshtml
@@ -21,9 +21,20 @@
             <td>HTML:</td>
             <td><textarea id="HTML" name="HTMLForm" class="form-control" rows="4"></textarea></td>
         </tr>
+
         <tr>
-            <td><input type="checkbox" name="checkbox1" id=" checkbox1" runat="server" checked="@Model.chc" /></td>
-            <td>Option 1</td>
+            <td>Title:</td>
+            <td><textarea id="HTML" name="titleForm"  class="form-control" rows="4"></textarea></td>
+        </tr>
+
+        <tr>
+            <td>Filename:</td>
+            <td><textarea id="HTML" name="filenameForm"  class="form-control" rows="4"></textarea></td>
+        </tr>
+
+        <tr>
+            <td>Has Content</td>
+            <td><input type="checkbox" name="checkbox1" id=" checkbox1" runat="server" checked="@Model.chc" /></td>         
         </tr>
     </table>
 
