--- a/CM/Pages/Index.cshtml
+++ b/CM/Pages/Index.cshtml
@@ -128,7 +128,7 @@
                     <th>@item.title</th>
                     @if (item.filename.Equals(""))
                     {
-                        <th>default.html</th>
+                        <th>default.cshtml</th>
                     }
                     else
                     {
