--- a/Sites/Pages/default.cshtml
+++ b/Sites/Pages/default.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
-@model IndexModel
+@model defaultModel
 @{
-    ViewData["Title"] = "Home page";
 }
 @using CM.Models
 <!DOCTYPE html>
@@ -10,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@Model.root.tree.title</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,18 +23,18 @@
             padding-bottom: 20px;
         }
 
-        header h1 {
-            margin: 0;
-            font-size: 32px;
-        }
+            header h1 {
+                margin: 0;
+                font-size: 32px;
+            }
 
         .nav-link {
             color: #fff;
         }
 
-        .nav-link:hover {
-            color: #dee2e6;
-        }
+            .nav-link:hover {
+                color: #dee2e6;
+            }
 
         main {
             padding-top: 20px;
@@ -65,7 +64,7 @@
             void RenderMenuItem(TreeNode node)
             {
                 if (node.tree.childcount == 0)
-                {                 
+                {
                     <li class="nav-item">
                         <a class="nav-link" href="#">@node.tree.name</a>
                     </li>
@@ -73,10 +72,10 @@
                 else
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="@node.tree.filename" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             @node.tree.name
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">                           
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             @foreach (var childNode in node.Children)
                             {
                                 <li><a class="dropdown-item" href="#">@childNode.tree.name</a></li>
@@ -104,7 +103,7 @@
     </header>
 
     <main class="container">
-        @Html.Raw(Model.mainHtml)
+        @Html.Raw(Model.html_)
     </main>
 
     <footer>
@@ -116,3 +115,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
