--- a/Sites/Pages/default.cshtml
+++ b/Sites/Pages/default.cshtml
@@ -66,13 +66,13 @@
                 if (node.tree.childcount == 0)
                 {
                     <li class="nav-item">
-                        <a class="nav-link" href="#">@node.tree.name</a>
+                        <a class="nav-link" href="@node.tree.filename">@node.tree.name</a>
                     </li>
                 }
                 else
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="@node.tree.filename" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             @node.tree.name
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
